Design: css 수정, 이미지 삽입, Naver Map API 추가
- 메인 페이지 이미지 수정 및 CSS 수정
- service section 이미지 추가
- Naver Map API 추가

Related to: #2

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
     password: 1234
     driver-class-name: oracle.jdbc.OracleDriver
 
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+
   jpa:
     hibernate:
       ddl-auto: create
