Refactor: Item 테이블 에러 관련, 필요없는 코드 제거, DB 변경
- h2 DB로 변경하니 제대로 동작 및 테이블 생성 확인
- ORACLE DB 문제는 차후 해결 예정

Related to: # 7

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:oracle:thin:@localhost:1521:XE
-    username: develop
-    password: 1234
-    driver-class-name: oracle.jdbc.OracleDriver
+    url: jdbc:h2:tcp://localhost/~/project;
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
 
   thymeleaf:
     prefix: classpath:/templates/
@@ -15,6 +15,10 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
 
 logging:
